# PRO-TIP-Automatic-Ultrasound-Calibration

./: .gitignore  LICENSE  README.md
ConeCalibrationPlugin/: CMakeLists.txt  Common.h  ConeCalibrationAlgorithm.cpp  ConeCalibrationAlgorithm.h  ConeCalibrationPlugin.cpp  ConeCalibrationPlugin.h
ConeCalibrationPlugin/model/: cones.pt  cones.yaml
phantom/: phantom.design
